--- a/DigiChamps/Views/School/GetSchoolList.cshtml
+++ b/DigiChamps/Views/School/GetSchoolList.cshtml
@@ -62,7 +62,14 @@
                                         <tr>
                                             <td>@(rowNo += 1)</td>
                                             <td>@item.SchoolName</td>
-                                            <td><img src="@imgSrc" style="width:50px;height:50px;"/></td>
+                                            <td>
+                                                @if (imgSrc != null && imgSrc != ""){
+                                                    <img src="@imgSrc" style="width:50px;height:50px;" />
+                                                }
+                                                else { 
+                                                    <img src="~/Images/digi1.jpg" style="width:50px;height:50px;" />
+                                                }
+                                                </td>
                                             <td style="display:none;">@item.SchoolId</td>
                                             <td>
                                                 @Html.ActionLink(" ", "SchoolDashBoard", "School", new { id = @item.SchoolId }, new { @class = "btn btn-sm btn-primary fa fa-eye", @title = "View" })
