--- a/DigiChamps/Views/School/AddTopperWay.cshtml
+++ b/DigiChamps/Views/School/AddTopperWay.cshtml
@@ -185,7 +185,7 @@
                 //}
                 var imgVal = $('#fileUpload').val();
                 if (imgVal == '') {
-                    if (!$("#uploadedFile").val()) {
+                    if (!$("#uploadedFile").val() && $("#Id").val() != "00000000-0000-0000-0000-000000000000") {
 
                     }
                     else {
