--- a/DigiChamps/Views/School/GetTimeTableList.cshtml
+++ b/DigiChamps/Views/School/GetTimeTableList.cshtml
@@ -69,7 +69,7 @@
 
                                         <td>
                                             @Html.ActionLink(" ", "AddTimeTable", "School", new { TimeTableId = @item.TimeTableId }, new { @class = "btn btn-sm btn-primary fa fa-pencil", @title = "View" })
-                                            @Html.ActionLink(" ", "DeleteAssignTeacher", "School", new { TimeTableId = @item.TimeTableId }, new { @class = "btn btn-sm btn-danger show-tooltip fa fa-trash-o", @onclick = "return confirm('Are you sure want to delete?')", @data_original_title = "Delete", @title = "Delete" })
+                                            @Html.ActionLink(" ", "DeleteTimeTable", "School", new { TimeTableId = @item.TimeTableId }, new { @class = "btn btn-sm btn-danger show-tooltip fa fa-trash-o", @onclick = "return confirm('Are you sure want to delete?')", @data_original_title = "Delete", @title = "Delete" })
 
 
                                         </td>
