--- a/DigiChamps/Views/School/GetStudyMaterialList.cshtml
+++ b/DigiChamps/Views/School/GetStudyMaterialList.cshtml
@@ -49,9 +49,11 @@
                             <thead>
                                 <tr>
                                     <th>S No.</th>
-                                    <th> ClassName </th>
+                                    <th>ClassName </th>
                                     <th>SubjectName</th>
                                     <th>Topic</th>
+                                    <th>File Name</th>
+                                    <th>File Type</th>
                                     @*<th>Material</th>*@
                                     @*<th style="display:none;">SchoolId</th>*@
                                     <th style="display:none;">UserId</th>
@@ -70,6 +72,8 @@
                                             <td>@item.ClassName</td>
                                             <td>@item.SubjectName</td>
                                             <td>@item.Material</td>
+                                            <td>@item.FileName</td>
+                                            <td>@item.FileType</td>
                                             @*<td>@item.</td>*@
                                             @*<td style="display:none;">@item.sc</td>*@
                                             <td style="display:none;">@item.Id</td>
