--- a/DigiChamps/Views/School/AddStudyMaterial.cshtml
+++ b/DigiChamps/Views/School/AddStudyMaterial.cshtml
@@ -20,9 +20,10 @@
     }
 }
 
-@using (Html.BeginForm("AddStudyMaterial", "School", FormMethod.Post, new { @class = "form-horizontal", id = "validation-form" }))
+@using (Html.BeginForm("AddStudyMaterial", "School", FormMethod.Post, new { @enctype = "multipart/form-data", @class = "form-horizontal", id = "validation-form" }))
 {
-    <form class="form-horizontal" id="validation-form">
+    @Html.AntiForgeryToken();
+    
         <div class="row">
             <div class="col-md-12">
                 <div class="box">
@@ -47,12 +48,12 @@
 
                                 @if (ViewBag.Class_Id != null)
                                 {
-                                    @(Html.DropDownListFor(x => x.Class_Id, ViewBag.ClassList as SelectList, "Please Select Class", new { @class = "form-control", @id = "ddlClass", data_rule_required = "true", data_msg_required = "Please select class" }))
+                                    @(Html.DropDownListFor(x => x.Class_Id, (IEnumerable<SelectListItem>)ViewBag.ClassList, "Please Select Class", new { @class = "form-control", @id = "ddlClass", data_rule_required = "true", data_msg_required = "Please select class" }))
                                     @Html.HiddenFor(x => x.Class_Id)
                                 }
                                 else
                                 {
-                                    @(Html.DropDownListFor(x => x.Class_Id, ViewBag.ClassList as SelectList, "Please Select Class", new { @class = "form-control", @id = "ddlClass", data_rule_required = "true", data_msg_required = "Please select class" }))
+                                    @(Html.DropDownListFor(x => x.Class_Id, (IEnumerable<SelectListItem>)ViewBag.ClassList, "Please Select Class", new { @class = "form-control", @id = "ddlClass", data_rule_required = "true", data_msg_required = "Please select class" }))
                                     @Html.ValidationMessageFor(x => x.Class_Id)
                                 }
 
@@ -63,12 +64,12 @@
                             <div class="col-sm-9  controls">
                                 @if (ViewBag.Subject_Id != null)
                                 {
-                                    @(Html.DropDownListFor(x => x.SubjectId, ViewBag.Subject_Id as SelectList, "Please Select Subject", new { @class = "form-control", @id = "ddlSubject", data_rule_required = "true", data_msg_required = "Please select subject" }))
+                                    @(Html.DropDownListFor(x => x.SubjectId, (IEnumerable<SelectListItem>)ViewBag.Subject_Id, "Please Select Subject", new { @class = "form-control", @id = "ddlSubject", data_rule_required = "true", data_msg_required = "Please select subject" }))
                                     @Html.HiddenFor(x => x.SubjectId)
                                 }
                                 else
                                 {
-                                    @(Html.DropDownListFor(x => x.SubjectId, ViewBag.Subject_Id as SelectList, "Please Select Subject", new { @class = "form-control", @id = "ddlSubject", data_rule_required = "true", data_msg_required = "Please select subject" }))
+                                    @(Html.DropDownListFor(x => x.SubjectId, (IEnumerable<SelectListItem>)ViewBag.Subject_Id, "Please Select Subject", new { @class = "form-control", @id = "ddlSubject", data_rule_required = "true", data_msg_required = "Please select subject" }))
                                     @Html.ValidationMessageFor(x => x.SubjectId)
                                 }
 
@@ -80,23 +81,23 @@
                             <div class="col-sm-9  controls">
 
                                 <input type="text" name="Topic" id="Topic" value="@Model.Topic" class="form-control" data-rule-required="true" data-msg-required="Please enter topic">
-
+                                @Html.ValidationMessageFor(x => x.Topic)
                             </div>
                         </div>
 
-                        <div class="form-group input-cont" style="display:none;">
+                        @*<div class="form-group input-cont" style="display:none;">
                             <label for="textfield5" class="col-sm-3  control-label">Material<span class="asterisk">*</span></label>
                             <div class="col-sm-9  controls">
 
-                                <input type="text" name="Material" id="Material" value="@Model.Material" class="form-control" data-rule-required="true" data-msg-required="Please enter study material">
+                                <input type="text" name="Material" id="Material" value="@Model.Material" class="form-control" data-rule-required="true" data-msg-required="Please enter study material2">
 
                             </div>
-                        </div>
+                        </div>*@
                         <div class="form-group">
                             <label for="textfield5" class="col-sm-3  control-label">select Material Type<span class="asterisk"></span></label>
                             <div class="col-sm-9  controls">
 
-                                <label><input id="rbtUploadMaterial" type="radio" name="toggler" value="1" checked />Upload Material</label>
+                                <label><input id="rbtUploadMaterial" type="radio" name="toggler" value="1" />Upload Material</label>
                                 <label><input id="rbtWriteTxt" type="radio" name="toggler" value="2" />Write Text</label>
 
                             </div>
@@ -105,15 +106,17 @@
                         <div class="form-group toHide" id="blk-1" style="display:none">
                             <label for="textfield5" class="col-sm-3  control-label">Upload File<span class="asterisk">*</span></label>
                             <div class="col-sm-9  controls">
-                                <input type="file" value="Choose a file" name="File" id="studymaterial" data-rule-required="true" data-msg-required="Please enter file" />
+                                @*<input type="file" value="Choose a file" name="File" id="studymaterial" data-rule-required="true" data-msg-required="Please enter file" />*@
+                                <input type="file" value="Choose a file" name="File" id="studymaterial" />
                                 @*accept=".xlsx,.xls,.doc,.docx,.ppt,.pptx,.txt,.pdf,image/*"*@
                             </div>
                         </div>
                         <div class="form-group toHide" id="blk-2" style="display:none">
                             <label for="textfield5" class="col-sm-3  control-label">Write Material<span class="asterisk">*</span></label>
                             <div class="col-sm-9  controls">
-                                @Html.TextAreaFor(x => x.MaterialText, new { @id = "txtMaterialText", @class = "form-control", data_rule_required = "true", data_msg_required = "Please enter study material" })
+                                @Html.TextAreaFor(x => x.MaterialText, new { @id = "txtMaterialText", @class = "form-control" })
                                 @Html.HiddenFor(x => x.MaterialType)
+                                
                             </div>
                         </div>
 
@@ -130,8 +133,7 @@
             </div>
         </div>
 
-    </form>
-
+  
 }
 
 @section scripts {
@@ -143,31 +145,42 @@
                 $("#blk-" + $(this).val()).show('slow');
                 if ($(this).val() == "1") {
                     $("#MaterialType").val("file");
+                    $("#studymaterial").attr("data-rule-required", true);
+                    $("#studymaterial").attr("data-msg-required", "Please enter file");
+                    $("#txtMaterialText").removeAttr("data-rule-required");
+                    $("#txtMaterialText").removeAttr("data-msg-required");
                 }
                 else {
                     $("#MaterialType").val("text");
+                    $("#txtMaterialText").attr("data-rule-required", true);
+                    $("#txtMaterialText").attr("data-msg-required", "Please enter study material");
+                    $("#studymaterial").removeAttr("data-rule-required");
+                    $("#studymaterial").removeAttr("data-msg-required");
                 }
             });
-            if ($("#MaterialType").val() == "") {
-                $("#MaterialType").val("text");
+         
+            if ($("#MaterialType").val() != "" && $("#MaterialType").val() == "text"){
+                $("#rbtWriteTxt").prop("checked", true);
             }
-            //alert($("#MaterialType").val());
+            if($("#MaterialType").val() != "" && $("#MaterialType").val() == "file"){
+                $("#rbtUploadMaterial").prop("checked", true);
+            }
             //Bind Material Type
             if ($(".StudyMaterialId").val() != "00000000-0000-0000-0000-000000000000" && $("#MaterialType").val() == "text") {
                 $('.toHide').hide();
                 $("#blk-2").show('slow');
-                $("#txtMaterialText").attr("data-rule-required", true);
-                $("#studymaterial").attr("data-rule-required", false);
             }
             else {
                 $('.toHide').hide();
                 $("#blk-1").show('slow');
-                $("#txtMaterialText").attr("data-rule-required", false);
+                $("#MaterialType").val("file");
                 $("#studymaterial").attr("data-rule-required", true);
+                $("#studymaterial").attr("data-msg-required", "Please enter file");
+                
             }
         });
         $('#validation-form').submit(function (e) {
-
+            return true;
             //var fileData = new FormData();
 
             //fileData.append('ClassId', $('#ddlClass :selected').val())
